[gd_scene load_steps=44 format=3 uid="uid://crewcka1sorgj"]

[ext_resource type="Script" uid="uid://dhhsbr8orxt8y" path="res://scripts/enemies/enemy_soldier.gd" id="1_ait0q"]
[ext_resource type="Texture2D" uid="uid://lsfsj7wnnw86" path="res://assets/sprites/enemies/Shot_1.png" id="1_cllg5"]
[ext_resource type="PackedScene" uid="uid://1fd0qdw5x8sa" path="res://bullet.tscn" id="2_sm2vj"]
[ext_resource type="Texture2D" uid="uid://d1ppeou8jeypw" path="res://assets/sprites/enemies/Dead.png" id="2_vvqcu"]
[ext_resource type="Texture2D" uid="uid://muw4v51u7fwe" path="res://assets/sprites/enemies/Idle.png" id="3_ait0q"]
[ext_resource type="Texture2D" uid="uid://qnbnjg2rikye" path="res://assets/sprites/enemies/Walk.png" id="4_sm2vj"]
[ext_resource type="Texture2D" uid="uid://de6ugpcc4gvsg" path="res://assets/sprites/enemies/Recharge.png" id="4_vvqcu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wdtj"]
size = Vector2(24, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi63w"]
atlas = ExtResource("1_cllg5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqoei"]
atlas = ExtResource("1_cllg5")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg8cb"]
atlas = ExtResource("1_cllg5")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8m7x"]
atlas = ExtResource("1_cllg5")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_41vpn"]
atlas = ExtResource("2_vvqcu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev6vd"]
atlas = ExtResource("2_vvqcu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f147"]
atlas = ExtResource("2_vvqcu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaqra"]
atlas = ExtResource("2_vvqcu")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4uvt"]
atlas = ExtResource("2_vvqcu")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_77gui"]
atlas = ExtResource("3_ait0q")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksfmf"]
atlas = ExtResource("3_ait0q")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu8gh"]
atlas = ExtResource("3_ait0q")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8ust"]
atlas = ExtResource("3_ait0q")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1uqa"]
atlas = ExtResource("3_ait0q")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xybpg"]
atlas = ExtResource("3_ait0q")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0m54"]
atlas = ExtResource("3_ait0q")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ait0q"]
atlas = ExtResource("4_vvqcu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm2vj"]
atlas = ExtResource("4_vvqcu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wdtj"]
atlas = ExtResource("4_vvqcu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_puphj"]
atlas = ExtResource("4_vvqcu")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_npp7u"]
atlas = ExtResource("4_vvqcu")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_to2ti"]
atlas = ExtResource("4_vvqcu")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_axxg3"]
atlas = ExtResource("4_vvqcu")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s222n"]
atlas = ExtResource("4_vvqcu")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuxui"]
atlas = ExtResource("4_sm2vj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m1vp"]
atlas = ExtResource("4_sm2vj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_diylu"]
atlas = ExtResource("4_sm2vj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jv7u"]
atlas = ExtResource("4_sm2vj")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gk3p"]
atlas = ExtResource("4_sm2vj")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_so5j1"]
atlas = ExtResource("4_sm2vj")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vble1"]
atlas = ExtResource("4_sm2vj")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r44g4"]
atlas = ExtResource("4_sm2vj")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_puphj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi63w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqoei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg8cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8m7x")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_41vpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev6vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f147")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f147")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f147")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f147")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaqra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4uvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4uvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4uvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4uvt")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77gui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksfmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu8gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8ust")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1uqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xybpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0m54")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ait0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm2vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wdtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puphj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npp7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to2ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axxg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s222n")
}],
"loop": true,
"name": &"Reload",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuxui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m1vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diylu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jv7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gk3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so5j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vble1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r44g4")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ait0q"]
radius = 1643.11

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ait0q"]
size = Vector2(20, 69)

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_ait0q")
bullet_scene = ExtResource("2_sm2vj")

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox" groups=["enemy"]]
position = Vector2(2, -35)
shape = SubResource("RectangleShape2D_0wdtj")

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(38, -54)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9, -66)
sprite_frames = SubResource("SpriteFrames_puphj")
animation = &"Walk"
frame_progress = 0.530801

[node name="detectionArea" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea" groups=["enemy"]]
position = Vector2(-5, -38)
shape = SubResource("CircleShape2D_ait0q")

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -35.5)
shape = SubResource("RectangleShape2D_ait0q")

[node name="FloorRay" type="RayCast2D" parent="."]
position = Vector2(21, -27)

[connection signal="area_entered" from="detectionArea" to="." method="_on_area_entered"]
[connection signal="area_exited" from="detectionArea" to="." method="_on_area_exited"]
